feature(authentication): Implement security for protected routes (#19)
This change addresses the need by:

1. Add `signinContact` method to contact controller class
2. Create token for user for successful signin
3. Add route to signin
4. Add `requireAuth` middleware to verify user before calling protected routes.
5. Refactor tests and add more tests

Delivers #163367609
