# server/controllers/contact.js
@@ -1,3 +1,4 @@
+import jwt from 'jsonwebtoken';
 import {
   Contact,
   Sms,
@@ -5,6 +6,7 @@ import {
 import {
   handleErrorMessage,
   handleSuccessMessage,
+  handleAuthenticationMessage,
 } from '../utils/messageHandler';
 
 /**
@@ -18,7 +20,7 @@ export default class ContactController {
    *
    * @param {Object} req - Express request object
    * @param {Object} res - Express response object
-   * @return {object} response data object
+   * @return {object} status message data
    */
   static createContact(req, res) {
     const {
@@ -53,11 +55,50 @@ export default class ContactController {
   }
 
   /**
+   * @description controller function that handles login of contact
+   *
+   * @param {Object} req - Express request object
+   * @param {Object} res - Express response object
+   * @return {object} message token
+   */
+  static signinContact(req, res) {
+    const {
+      name,
+      phoneNumber,
+    } = req.body;
+
+    Contact.findOne({
+      where: {
+        name,
+        phoneNumber,
+      },
+    })
+      .then((contact) => {
+        if (!contact) {
+          return handleErrorMessage(res, 401, 'Authentication failed.');
+        } else if (contact) {
+          const contactdata = {
+            id: contact.id,
+            name: contact.name,
+          };
+          const token = jwt.sign({
+            contact: contactdata,
+          }, process.env.TOKEN_SECRET, {
+            expiresIn: process.env.TOKEN_EXPIRY_TIME,
+          });
+
+          return handleAuthenticationMessage(res, 200, token, 'Authentication & Login successful');
+        }
+      })
+      .catch((err) => handleErrorMessage(res, 500, err));
+  }
+
+  /**
    * @description Get all contacts
    *
    * @param {Object} req - Express request object
    * @param {Object} res - Express response object
-   * @return {object} response data object
+   * @return {object} status message data
    */
   static getAllContacts(req, res) {
     return Contact.findAll({
@@ -101,7 +142,7 @@ export default class ContactController {
    *
    * @param {Object} req - Express request object
    * @param {Object} res - Express response object
-   * @return {object} response data object
+   * @return {object} status message data
    */
   static getContact(req, res) {
     return Contact
@@ -128,7 +169,7 @@ export default class ContactController {
    *
    * @param {Object} req - Express request object
    * @param {Object} res - Express response object
-   * @return {object} response data object
+   * @return {object} status message data
    */
   static updateContact(req, res) {
     const {
@@ -136,7 +177,7 @@ export default class ContactController {
       phoneNumber,
     } = req.body;
 
-    Contact.find({ where: { id: req.params.contactId } })
+    Contact.find({ where: { id: req.decoded.contact.id } })
       .then((contact) => {
         if (name || phoneNumber) {
           return contact.update({
@@ -160,10 +201,10 @@ export default class ContactController {
    *
    * @param {Object} req - Express request object
    * @param {Object} res - Express response object
-   * @return {object} response data object
+   * @return {object} status message data
    */
   static deleteContact(req, res) {
-    return Contact.destroy({ where: { id: req.params.contactId } })
+    return Contact.destroy({ where: { id: req.decoded.contact.id } })
     .then(() => handleSuccessMessage(res, 200, null, 'Contact deleted successfully.'))
     .catch(err => handleErrorMessage(res, 500, err));
   }
